; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/classq/extr_classq_subr.c_ifclassq_dequeue.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/classq/extr_classq_subr.c_ifclassq_dequeue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifclassq = type { i32 }

@MBUF_SC_UNSPEC = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ifclassq_dequeue(%struct.ifclassq* %0, i32 %1, i32 %2, i8** %3, i8** %4, i32* %5, i32* %6, i32* %7) #0 {
  %9 = alloca %struct.ifclassq*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8**, align 8
  %13 = alloca i8**, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  store %struct.ifclassq* %0, %struct.ifclassq** %9, align 8
  store i32 %1, i32* %10, align 4
  store i32 %2, i32* %11, align 4
  store i8** %3, i8*** %12, align 8
  store i8** %4, i8*** %13, align 8
  store i32* %5, i32** %14, align 8
  store i32* %6, i32** %15, align 8
  store i32* %7, i32** %16, align 8
  %17 = load %struct.ifclassq*, %struct.ifclassq** %9, align 8
  %18 = load i32, i32* @MBUF_SC_UNSPEC, align 4
  %19 = load i32, i32* %10, align 4
  %20 = load i32, i32* %11, align 4
  %21 = load i8**, i8*** %12, align 8
  %22 = load i8**, i8*** %13, align 8
  %23 = load i32*, i32** %14, align 8
  %24 = load i32*, i32** %15, align 8
  %25 = load i32, i32* @FALSE, align 4
  %26 = load i32*, i32** %16, align 8
  %27 = call i32 @ifclassq_dequeue_common(%struct.ifclassq* %17, i32 %18, i32 %19, i32 %20, i8** %21, i8** %22, i32* %23, i32* %24, i32 %25, i32* %26)
  ret i32 %27
}

declare dso_local i32 @ifclassq_dequeue_common(%struct.ifclassq*, i32, i32, i32, i8**, i8**, i32*, i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
